--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
   "homepage": "https://github.com/51breeze/easescript-installer#readme",
   "dependencies": {
     "commander": "^2.11.0",
-    "extend": "^1.3.0",
+    "extend": ">=2.0.2",
     "inquirer": "^6.2.2",
     "colors": "^1.1.2"
   },
   "devDependencies": {
     "commander": "^2.11.0",
-    "extend": "^1.3.0",
+    "extend": ">=2.0.2",
     "inquirer": "^6.2.2",
     "colors": "^1.1.2"
   }
