--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "easescript-installer",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "easescript installer",
   "main": "./index.js",
   "bin": {
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "test": "node ./bin/installer.js -V",
-    "installer": "node ./bin/installer.js",
+    "init": "node ./bin/installer.js --init",
     "create": "node ./bin/installer.js --create"
   },
   "repository": {
