--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "es-installer",
-  "version": "1.0.14",
+  "version": "1.1.0",
   "description": "Create Development Framework For EaseScript",
   "main": "./lib/index.js",
   "bin": {
-    "esi": "./lib/index.js"
+    "esi": "./bin/esi.js"
   },
   "scripts": {
     "dev": "node ./lib/index.js"
