--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "esi": "./bin/esi.js"
   },
   "scripts": {
-    "dev": "node ./lib/index.js"
+    "dev": "node ./lib/index.js",
+    "mysql": "node ./lib/scripts/mysql.js",
+    "php": "node ./lib/scripts/php.js"
   },
   "repository": {
     "type": "git",
@@ -23,9 +25,12 @@
   },
   "homepage": "https://github.com/51breeze/es-installer#readme",
   "dependencies": {
-    "commander": "~2.11.0",
     "chalk": "^4.0.0",
+    "commander": "~2.11.0",
     "extend": ">=2.0.2",
     "inquirer": "^6.2.2"
+  },
+  "devDependencies": {
+    "shelljs": "^0.8.5"
   }
 }
