--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "es-installer",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "Create Development Framework For EaseScript",
   "main": "./lib/index.js",
   "bin": {
@@ -28,6 +28,7 @@
     "chalk": "^4.0.0",
     "commander": "~2.11.0",
     "extend": ">=2.0.2",
+    "fs-extra": "^11.2.0",
     "inquirer": "^6.2.2"
   },
   "devDependencies": {
